test/shortCircuitOrAssign3.slq

def main() {
	x := true;
	y := H(0:B); /// error
	z := dup(y);
	x ||= measure(y);
	return (x,H(z));
}
